# Tickets

./: CMakeLists.txt  tests.txt
headers/: Date.h  Event.h  EventArr.h  Hall.h  HallArr.h  Ticket.h  TicketArr.h
sources/: CommandParser.cpp  Date.cpp  Event.cpp  EventArr.cpp  Hall.cpp  HallArr.cpp  Ticket.cpp  TicketArr.cpp  main.cpp
